<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="safe_switch"
        android:title="@string/pref_title_safe_search"
        android:summary="@string/pref_description_safe_search"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="site_text"
        android:title="@string/pref_title_site"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <ListPreference
        android:key="size_list"
        android:title="@string/pref_title_image_size"
        android:defaultValue="large"
        android:entries="@array/pref_list_size"
        android:entryValues="@array/pref_list_size_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="type_list"
        android:title="@string/pref_title_image_type"
        android:defaultValue="all"
        android:entries="@array/pref_list_type"
        android:entryValues="@array/pref_list_type_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="color_list"
        android:title="@string/pref_title_image_color"
        android:defaultValue="none"
        android:entries="@array/pref_list_color"
        android:entryValues="@array/pref_list_color_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
</PreferenceScreen>
